# html-tool-manager

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  REVIEW_ITEMS.md  biome.json  coverage.json  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/commands/: dev.md  lint.md  pre-commit.md  release.md  security.md  test.md
.claude/commands/docker/: build.md  run.md
.claude/skills/html-tool-explorer/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  docker-scan.yml  e2e-test.yml  release-check.yml
docs/: csp-policy.md  security-scanning.md
scripts/: migrate_add_tool_type.py
src/html_tool_manager/: main.py
src/html_tool_manager/api/: __init__.py  backup.py  query_parser.py  snapshots.py  templates.py  tools.py
src/html_tool_manager/core/: backup.py  config.py  db.py  exceptions.py  file_utils.py  security.py
src/html_tool_manager/models/: __init__.py  backup.py  snapshot.py  tool.py
src/html_tool_manager/repositories/: __init__.py  snapshot_repository.py  tool_repository.py
src/html_tool_manager/templates/: react_template.py
src/html_tool_manager/utils/: code_detector.py
static/css/: app.css
static/js/: backup.js  command-palette.js  editor.js  keyboard-shortcuts.js  main.js  snapshot.js  tag-autocomplete.js  templates.js  theme.js  validation.js
static/templates/: templates.json
static/templates/tools/: base64-encoder.html  char-counter.html  color-picker.html  hash-generator.html  json-formatter.html  markdown-preview.html  qr-generator.html  regex-tester.html  timestamp-converter.html  uuid-generator.html
templates/: backup.html  base.html  create.html  edit.html  index.html  templates.html  tool_viewer.html
tests/: conftest.py  test_backup.py  test_backup_api.py  test_code_detector.py  test_error_cases.py  test_file_utils.py  test_fork_api.py  test_health.py  test_import_export.py  test_optimistic_lock.py  test_react_edge_cases.py  test_react_integration.py  test_react_template.py  test_search.py  test_security.py  test_snapshot_api.py  test_snapshot_repository.py  test_tag_suggest.py  test_templates.py  test_validation.py
tests/e2e/: __init__.py  conftest.py  test_basic.py  test_docker_entrypoint.py  test_keyboard_shortcuts.py  test_theme.py  test_view_switcher.py
