[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[project]
name = "html-tool-manager"
version = "0.1.0"
description = "HTML/JS tools manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "jinja2",
    "pydantic-settings",
    "python-multipart>=0.0.20",
    "msgpack>=1.1.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I", "N", "D"]

[tool.ruff.lint]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in public method
    "D107", # Missing docstring in __init__
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poe.tasks.dev]
cmd = "uvicorn html_tool_manager.main:app --reload"
env = { PYTHONPATH = "src" }

[tool.poe.tasks.test]
cmd = "pytest -v"

[tool.poe.tasks.lint]
shell = "ruff check --fix . && ruff format ."

[tool.poe.tasks.security]
cmd = "bandit -r src/ -f json"

[dependency-groups]
dev = [
    "pytest",
    "poethepoet",
    "httpx",
    "ruff",
    "msgpack>=1.1.2",
    "bandit",
]

