[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[project]
name = "html-tool-manager"
version = "0.1.0"
description = "HTML/JS tools manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "jinja2",
    "pydantic-settings",
    "python-multipart>=0.0.20",
    "msgpack>=1.1.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in public method
    "D107", # Missing docstring in __init__
    "D203", # one-blank-line-before-class (incompatible with D211)
    "D213", # multi-line-summary-second-line (incompatible with D212)
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation point
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poe.tasks.dev]
cmd = "uvicorn html_tool_manager.main:app --reload"
env = { PYTHONPATH = "src" }

[tool.poe.tasks.test]
cmd = "pytest -v"

[tool.poe.tasks.lint]
shell = "ruff check --fix . && ruff format ."

[tool.poe.tasks.security]
cmd = "bandit -r src/ -f json"

[tool.poe.tasks.typecheck]
cmd = "mypy src/"

[tool.poe.tasks.typecheck-experimental]
help = "Astral製の実験的型チェッカー ty を実行（参考用）"
cmd = "ty check src/"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "poethepoet",
    "httpx",
    "ruff",
    "bandit",
    "pip-audit",
    "mypy",
    "ty",  # Astral製の実験的型チェッカー（pre-alpha）
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

